<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HistoryReport">


    <TextView
        android:id="@+id/tvSelectDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/select_the_date_of_the_report"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toBottomOf="@+id/tvDateReport"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="82dp"
            android:layout_height="match_parent"
            android:text="@string/date" />

        <TextView
            android:id="@+id/tvProductIdHis"
            android:layout_width="77dp"
            android:layout_height="match_parent"
            android:text="@string/product_id" />

        <TextView
            android:id="@+id/tvProductNameHis"
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:text="@string/product_name" />

        <TextView
            android:id="@+id/tvAction"
            android:layout_width="51dp"
            android:layout_height="match_parent"
            android:text="@string/action" />

        <TextView
            android:id="@+id/tvHisQty"
            android:layout_width="93dp"
            android:layout_height="match_parent"
            android:text="@string/quantity" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow4">

        <TextView
            android:id="@+id/tvDateData"
            android:layout_width="82dp"
            android:layout_height="match_parent"
            android:textAlignment="textStart" />

        <TextView
            android:id="@+id/tvProductIdHisData"
            android:layout_width="76dp"
            android:layout_height="match_parent"
            android:textAlignment="textStart" />

        <TextView
            android:id="@+id/tvProductNameHisData"
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:textAlignment="textStart" />

        <TextView
            android:id="@+id/tvActionData"
            android:layout_width="54dp"
            android:layout_height="match_parent"
            android:textAlignment="textStart" />

        <TextView
            android:id="@+id/tvHisQtyData"
            android:layout_width="86dp"
            android:layout_height="match_parent"
            android:textAlignment="textStart" />
    </TableRow>

    <Button
        android:id="@+id/btnDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_date"
        app:layout_constraintBottom_toTopOf="@+id/tableRow4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDateReport" />

    <TextView
        android:id="@+id/tvDateReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSelectDate" />

</androidx.constraintlayout.widget.ConstraintLayout>