<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RetriveProdActivity">


    <TextView
        android:id="@+id/prodId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/prodid"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="@+id/rackId"
        app:layout_constraintTop_toBottomOf="@+id/rackId" />

    <TextView
        android:id="@+id/prodName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/item_name"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/prodId"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/prodId"
        app:layout_constraintTop_toBottomOf="@+id/prodId" />

    <Spinner
        android:id="@+id/prodItem"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/itemPrice"
        app:layout_constraintStart_toStartOf="@+id/prodQty"
        app:layout_constraintTop_toBottomOf="@+id/itemPrice" />

    <TextView
        android:id="@+id/rackId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:text="@string/rack_id"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/itemPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="48dp"
        android:text="@string/price"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prodQty" />

    <TextView
        android:id="@+id/prodQty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/quantity"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/prodName"
        app:layout_constraintTop_toBottomOf="@+id/prodName" />


</androidx.constraintlayout.widget.ConstraintLayout>