<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".warehouse">
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/track_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/track" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/search_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/map_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/warehouse_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp_warehouse"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>