<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrackDetailActivity">

    <TextView
        android:id="@+id/item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/detail_item_id"
        android:textColor="@color/teal_200"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/item_title"
        app:layout_constraintTop_toBottomOf="@+id/item_title" />

    <TextView
        android:id="@+id/detail_warehouse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:layout_marginBottom="81dp"
        android:text="@string/detail_warehouse"
        android:textColor="#31291D1D"
        app:layout_constraintBottom_toTopOf="@+id/circle_4"
        app:layout_constraintEnd_toEndOf="@+id/circle_4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/item_id"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/line_1"
        android:layout_width="50dp"
        android:layout_height="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/circle_1"
        app:layout_constraintEnd_toStartOf="@+id/circle_2"
        app:layout_constraintStart_toEndOf="@+id/circle_1"
        app:layout_constraintTop_toTopOf="@+id/circle_1"
        app:srcCompat="@drawable/line" />
    <ImageView
        android:id="@+id/line_2"
        android:layout_width="50dp"
        android:layout_height="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/circle_2"
        app:layout_constraintEnd_toStartOf="@+id/circle_3"
        app:layout_constraintStart_toEndOf="@+id/circle_2"
        app:layout_constraintTop_toTopOf="@+id/circle_2"
        app:srcCompat="@drawable/line" />

    <ImageView
        android:id="@+id/line_3"
        android:layout_width="50dp"
        android:layout_height="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/circle_3"
        app:layout_constraintEnd_toStartOf="@+id/circle_4"
        app:layout_constraintStart_toEndOf="@+id/circle_3"
        app:layout_constraintTop_toTopOf="@+id/circle_3"
        app:srcCompat="@drawable/line" />

    <ImageView
        android:id="@+id/circle_1"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="76dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_id"
        android:padding="15dp"
        android:background="@drawable/cerclebackgroundgrey"
        app:srcCompat="@drawable/ic_baseline_check_24"
        android:contentDescription="TODO" />

    <ImageView
        android:id="@+id/circle_2"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_margin="20dp"
        android:background="@drawable/cerclebackgroundgrey"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/circle_1"
        app:layout_constraintStart_toEndOf="@+id/circle_1"
        app:layout_constraintTop_toTopOf="@+id/circle_1"
        app:srcCompat="@drawable/ic_baseline_check_24"
        />

    <ImageView
        android:id="@+id/circle_3"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/circle_2"
        app:layout_constraintStart_toEndOf="@+id/circle_2"
        app:layout_constraintTop_toTopOf="@+id/circle_2"
        android:padding="15dp"
        android:background="@drawable/cerclebackgroundgrey"
        app:srcCompat="@drawable/ic_baseline_check_24" />

    <ImageView
        android:id="@+id/circle_4"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_margin="20dp"
        android:background="@drawable/cerclebackgroundgrey"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/circle_3"
        app:layout_constraintStart_toEndOf="@+id/circle_3"
        app:layout_constraintTop_toTopOf="@+id/circle_3"
        app:srcCompat="@drawable/ic_baseline_check_24" />

    <TextView
        android:id="@+id/shipment_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/shipment_booked"
        android:textAlignment="textStart"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/circle_1"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="@+id/circle_1"
        app:layout_constraintTop_toBottomOf="@+id/circle_1" />

    <TextView
        android:id="@+id/in_transit_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/in_transit"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/shipment_msg"
        app:layout_constraintEnd_toEndOf="@+id/circle_2"
        app:layout_constraintStart_toStartOf="@+id/circle_2" />

    <TextView
        android:id="@+id/out_delivery_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/out_of_delivery"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/in_transit_msg"
        app:layout_constraintEnd_toEndOf="@+id/circle_3"
        app:layout_constraintStart_toStartOf="@+id/circle_3" />

    <TextView
        android:id="@+id/delivered_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delivered"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/out_delivery_msg"
        app:layout_constraintEnd_toEndOf="@+id/circle_4"
        app:layout_constraintStart_toStartOf="@+id/circle_4" />


</androidx.constraintlayout.widget.ConstraintLayout>