<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".InventoryReport"
   >

    <ImageButton
        android:id="@+id/imgBtnLeft"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/imgleft"
        android:src="@drawable/left_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvRackId" />

    <ImageButton
        android:id="@+id/imgBtnRight"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/imgright"
        android:src="@drawable/right_arrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvRackId" />

    <TextView
        android:id="@+id/tvRackId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/tvTotalQty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />


    <TextView
        android:id="@+id/tvTotalQty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintBaseline_toBaselineOf="@id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTotalQty">


    </TableLayout>

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="match_parent"
        android:layout_height="18dp"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTotalQty">

        <TextView
            android:id="@+id/tvProductId"
            android:layout_width="95dp"
            android:layout_height="30dp"
            android:text="@string/product_id"
            tools:layout_editor_absoluteX="181dp"
            tools:layout_editor_absoluteY="106dp" />

        <TextView
            android:id="@+id/tvProductName"
            android:layout_width="184dp"
            android:layout_height="match_parent"
            android:text="@string/product_name"
            tools:layout_editor_absoluteX="181dp"
            tools:layout_editor_absoluteY="106dp" />

        <TextView
            android:id="@+id/tvInvQty"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:text="@string/quantity"
            tools:layout_editor_absoluteX="181dp"
            tools:layout_editor_absoluteY="106dp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tableRow">

        <TextView
            android:id="@+id/tvProductIdData"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            tools:layout_editor_absoluteX="61dp"
            tools:layout_editor_absoluteY="316dp" />

        <TextView
            android:id="@+id/tvProductNameData"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            tools:layout_editor_absoluteX="155dp"
            tools:layout_editor_absoluteY="308dp" />

        <TextView
            android:id="@+id/tvInvQtyData"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            tools:layout_editor_absoluteX="305dp"
            tools:layout_editor_absoluteY="324dp" />

    </TableRow>

</androidx.constraintlayout.widget.ConstraintLayout>